2008-08-29 22:48-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PBPbxNativeTarget.m: If the PRODUCT_NAME key isn't available then
	fall back to using the "name" key in the target dictionary.

2008-08-03 20:22-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile
	* main.m
	* PBMakefileGenerator.m: Replace target names with versions that have
	"_" instead of " " since this causes an issue.
	* PBPbxNativeTarget.h:
	* PBPbxNativeTarget.m: Add method targetNameReplacingString.

2008-07-08 16:10-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* PBPbxGroup.m: Correction for bug #23795.  Patch submitted by
	Peter Cooper <comrade@obverse.com.au>

2008-02-11 00:29-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PBPbxNativeTarget.m: Give meaningful error when the project type is
	one that don't currently understand.

2007-12-25 11:58-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PBPbxGroup.m
	* PBPbxNativeTarget.m: Remove duplications from the groups and
	the source files to prevent "multiple definition" errors when 
	building.

2006-12-02 18:43-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile
	* main.m
	* PBMakefileGenerator.h
	* PBMakefileGenerator.m
	* PBPbxGroup.h
	* PBPbxGroup.m
	* PBPbxNativeTarget.h
	* PBPbxNativeTarget.m
	* PBPbxProject.h
	* PBPbxProject.m: General cleanup of code.  Corrected code which
	was causing warnings.

2006-09-21 Hans Baier  <hansfbaier@googlemail.com>
	- Initial release (0.5)
	* PBPbxNativeTarget.m ([PBPbxNativeTarget -addPath:withFileReferenceKey:toArray:type:]):
	- the path of SOURCE_ROOT referenced files are added to include dirs
	- refactored getters using return AUTORELEASE(RETAIN(xxx))
	* PBPbxProject.m: refactored getters using 
	  return AUTORELEASE(RETAIN(xxx))
	* README: added
	* cmdline.h:
	* optionsparser.ggo: changed version to 0.5

2006-09-16 Hans Baier  <hansfbaier@googlemail.com>
	- Added support for Panther xcode files